[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyanalysisml"
version = "0.1.0"
description = "OHLC data analysis with pandas-ta and ML for cryptocurrency prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "python-binance>=1.0.16",
    "pandas-ta>=0.3.14b0",  # Using pandas-ta instead of TA-Lib
    "scikit-learn>=1.0.2",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.2",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.scripts]
pyanalysisml = "pyanalysisml.cli:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]
